--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,50 @@
+:root {
+    --primary-color: #49666d;
+    --secondary-color: #f9f9f9;
+    --text-color: #333;
+    --font-family: Arial, sans-serif;
+    --color-listas: #554dc4;
+}
+
+::selection {
+    background-color: aquamarine;
+    color: black; 
+}
+
 /* Estilos generales */
 body {
-    font-family: Arial, sans-serif;
+    font-family: var(--font-family);
     line-height: 1.4;
     margin: 0;
     padding: 0;
     background-color: #ffffff;
-    color: #333;
+    color: var(--text-color);
     background-image: url(fondoindex.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
+.box-model {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    margin: 20px auto;
+    max-width: 800px;
+    background-color: var(--secondary-color);
+    border: 2px solid var(--primary-color);
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+nav a:hover {
+    background-color: var(--primary-color);
+    color: white;
+}
+
+header h1::before {
+    content: "★ ";
+    color: var(--primary-color);
+}
 
 /* Encabezado principal */
 header {
@@ -73,6 +107,18 @@ header {
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
+ul li::marker {
+    color: var(--color-listas); 
+}
+
+ul {
+    list-style: circle; 
+    margin: 10px 0;
+    padding: 20px;
+}
+
+ 
 
 #navegacion-index {
     text-align: center;
